Folder restructure and http client generation
