# product-api/swagger.yaml
@@ -62,15 +62,6 @@ info:
   title: classification of Product API
   version: 1.0.0
 paths:
-  /products:
-    get:
-      description: Returns a list of products
-      operationId: listProducts
-      responses:
-        "200":
-          $ref: '#/responses/productsResponse'
-      tags:
-      - products
   /products/{id}:
     delete:
       description: Deletes a product
@@ -89,6 +80,24 @@ paths:
         "404":
           $ref: '#/responses/errorResponse'
         "501":
+          $ref: '#/responses/errorResponse'
+      tags:
+      - products
+    get:
+      description: Returns a list of products
+      operationId: listSingleProduct
+      parameters:
+      - description: The id of the product for which the operation relates
+        format: int64
+        in: path
+        name: id
+        required: true
+        type: integer
+        x-go-name: ID
+      responses:
+        "200":
+          $ref: '#/responses/productsResponse'
+        "400":
           $ref: '#/responses/errorResponse'
       tags:
       - products
